# mzretools

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  addrtool.cpp  build.sh  cpu.cpp  cpu.h  debug.h  dos.cpp  dos.h  dostrace.cpp  dostrace.h  error.h  interrupt.cpp  interrupt.h  main.cpp  memory.cpp  memory.h  mz.cpp  mz.h  mzhdr.cpp  psptool.cpp  syscall.cpp  syscall.h  system.cpp  system.h  test.cpp  test_main.cpp  todo.txt  types.h  util.cpp  util.h
.github/workflows/: ci.yml
diagrams/: process-stable.d2
include/dos/: address.h  analysis.h  codemap.h  cpu.h  debug.h  dos.h  editdistance.h  error.h  executable.h  instruction.h  interrupt.h  map.h  memory.h  modrm.h  mz.h  opcodes.h  output.h  psp.h  registers.h  routine.h  scanq.h  segment.h  signature.h  system.h  types.h  util.h
libdisasm-0.23/: CMakeLists.txt
libdisasm-0.23/libdisasm/: x86_disasm.c
src/: address.cpp  analysis.cpp  codemap.cpp  cpu.cpp  dos.cpp  executable.cpp  instruction.cpp  interrupt.cpp  main.cpp  map.cpp  memory.cpp  modrm.cpp  mz.cpp  mzdata.cpp  mzdiff.cpp  mzdup.cpp  mzhdr.cpp  mzmap.cpp  mzptr.cpp  mzsig.cpp  opcodes.cpp  output.cpp  psp.cpp  psptool.cpp  registers.cpp  routine.cpp  scanq.cpp  segment.cpp  signature.cpp  system.cpp  util.cpp
test/: analysis_test.cpp  cpu_test.cpp  debug.cpp  debug.h  dos_test.cpp  functional_test.cpp  memory_test.cpp  sub.asm  system_test.cpp  test_main.cpp
tools/: addrtool.cpp  bindiff.sh  bitdump.py  bruteflags.py  compare.sh  config.py  diff.sh  disasm.sh  disasmdiff.sh  dosbuild-kvikdos.sh  dosbuild.sh  exeimgdump.sh  extract_routines.py  fingerprint.sh  helper.py  hexgrep.py  imgdiff.sh  lowercase.sh  lst2asm.py  lst2ch.py  lstmerge.py  map_xref.py  msc_hash.py  mzdiff.cpp  mzhdr.cpp  mzmap.cpp  output.py  psptool.cpp  rag_common.py  rag_index.py  rag_mcp.py  rag_query.py  reasm_clean.py  replace_routines.py  segaddr.py  test.sh  util.py  version_gen.sh  vga2bmp.py  vgashow.py
